--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="Car"
-            type="com.example.retrofitlist.RetroPhoto" />
+            type="com.example.retrofitlist.model.pojo.RetroPhoto" />
     </data>
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
